// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration with stylelint stylelint --fix with markdown block-in-blockquote.md 1`] = `
"# Header

## Blockquote

> \`\`\`css
> a {
>   color: red;
> }
> \`\`\`

## Nesting Blockquote

> > \`\`\`css
> > a {
> >   color: red;
> > }
> > \`\`\`

## Blockquote With HTML

> \`\`\`html
> <style>
> a {
>   color: red;
> }
> </style>
> \`\`\`

## Blockquote With Blank

> > \`\`\`css
> > a {
> >   color: red;
> > }
> > \`\`\`
"
`;

exports[`Integration with stylelint stylelint --fix with markdown block-in-list.md 1`] = `
"# Header

## Unordered List

- \`\`\`css
  a {
    color: red;
  }
  \`\`\`

+ \`\`\`css
  .b { color: red; }

  \`\`\`

* \`\`\`css
  .c { color: red; }

  \`\`\`

## Ordered List

1. \`\`\`css
  .d {
    color: red;
  }
   \`\`\`

1. \`\`\`css
  .e { color: red; }

   \`\`\`

2. \`\`\`css
  .f { color: red; }

   \`\`\`
"
`;

exports[`Integration with stylelint stylelint --fix with markdown block-in-list-blockquote.md 1`] = `
"# Header

## List in Blockquote

> - \`\`\`css
>   a {
>     user-select: none;
>   }
>   \`\`\`
>
>   1. \`\`\`css
>       a {
>         user-select: none;
>       }
>      \`\`\`
"
`;

exports[`Integration with stylelint stylelint --fix with markdown lang-postcss.md 1`] = `
"# Lang PostCss

\`\`\`postcss
a {
  a {
    color: red;
  }
}
\`\`\`

\`\`\`pcss
a {
  a {
    color: red;
  }
}
\`\`\`
"
`;

exports[`Integration with stylelint stylelint --fix with markdown nest.md 1`] = `
"# Header

- CSS

  \`\`\`css
    a {
      color: red;
    }
  \`\`\`

  - CSS

    \`\`\`css
      a {
        color: red;
      }
    \`\`\`

- CSS

  \`\`\`css
    a {
      color: red;
    }
  \`\`\`

- CSS

  \`\`\`css
  a {
    color: red;
  }
  \`\`\`

- CSS

  \`\`\`css
  a {
    color: red;
  }
  \`\`\`
"
`;

exports[`Integration with stylelint stylelint --fix with markdown test.md 1`] = `
"# Header

\`\`\`css
a {
  color: red;
}
\`\`\`

\`\`\`scss
a {
  color: red;
}
// comment
.b {
  color: red;
}
\`\`\`

\`\`\`html
<style>
a {
  color: red;
}
</style>
\`\`\`

<style>
a {
  color: red;
}
</style>

\`\`\`
block
\`\`\`
"
`;

exports[`Integration with stylelint stylelint with markdown block-in-blockquote.md 1`] = `
Array [
  Object {
    "column": 4,
    "endColumn": 1,
    "endLine": 36,
    "line": 35,
    "rule": "block-closing-brace-empty-line-before",
    "severity": "error",
    "text": "Unexpected empty line before closing brace (block-closing-brace-empty-line-before)",
  },
  Object {
    "column": 7,
    "endColumn": 18,
    "endLine": 34,
    "line": 34,
    "rule": "declaration-empty-line-before",
    "severity": "error",
    "text": "Unexpected empty line before declaration (declaration-empty-line-before)",
  },
  Object {
    "column": 5,
    "endColumn": 6,
    "endLine": 8,
    "line": 8,
    "rule": "indentation",
    "severity": "error",
    "text": "Expected indentation of 2 spaces (indentation)",
  },
  Object {
    "column": 7,
    "endColumn": 8,
    "endLine": 16,
    "line": 16,
    "rule": "indentation",
    "severity": "error",
    "text": "Expected indentation of 4 spaces (indentation)",
  },
  Object {
    "column": 27,
    "endColumn": 28,
    "endLine": 23,
    "line": 23,
    "rule": "indentation",
    "severity": "error",
    "text": "Expected indentation of 2 spaces (indentation)",
  },
  Object {
    "column": 4,
    "endColumn": 1,
    "endLine": 36,
    "line": 35,
    "rule": "indentation",
    "severity": "error",
    "text": "Expected indentation of 4 spaces (indentation)",
  },
]
`;

exports[`Integration with stylelint stylelint with markdown block-in-list.md 1`] = `
Array [
  Object {
    "column": 3,
    "endColumn": 4,
    "endLine": 9,
    "line": 9,
    "rule": "block-closing-brace-empty-line-before",
    "severity": "error",
    "text": "Unexpected empty line before closing brace (block-closing-brace-empty-line-before)",
  },
  Object {
    "column": 4,
    "endColumn": 5,
    "endLine": 29,
    "line": 29,
    "rule": "block-closing-brace-empty-line-before",
    "severity": "error",
    "text": "Unexpected empty line before closing brace (block-closing-brace-empty-line-before)",
  },
  Object {
    "column": 1,
    "endColumn": 2,
    "endLine": 21,
    "line": 18,
    "rule": "no-empty-first-line",
    "severity": "error",
    "text": "Unexpected empty line (no-empty-first-line)",
  },
  Object {
    "column": 1,
    "endColumn": 2,
    "endLine": 41,
    "line": 38,
    "rule": "no-empty-first-line",
    "severity": "error",
    "text": "Unexpected empty line (no-empty-first-line)",
  },
  Object {
    "column": 4,
    "endColumn": 15,
    "endLine": 7,
    "line": 7,
    "rule": "indentation",
    "severity": "error",
    "text": "Expected indentation of 4 spaces (indentation)",
  },
  Object {
    "column": 4,
    "endColumn": 5,
    "endLine": 29,
    "line": 26,
    "rule": "indentation",
    "severity": "error",
    "text": "Expected indentation of 2 spaces (indentation)",
  },
  Object {
    "column": 4,
    "endColumn": 5,
    "endLine": 29,
    "line": 29,
    "rule": "indentation",
    "severity": "error",
    "text": "Expected indentation of 2 spaces (indentation)",
  },
  Object {
    "column": 4,
    "endColumn": 15,
    "endLine": 27,
    "line": 27,
    "rule": "indentation",
    "severity": "error",
    "text": "Expected indentation of 4 spaces (indentation)",
  },
  Object {
    "column": 4,
    "endColumn": 22,
    "endLine": 33,
    "line": 33,
    "rule": "indentation",
    "severity": "error",
    "text": "Expected indentation of 2 spaces (indentation)",
  },
  Object {
    "column": 4,
    "endColumn": 22,
    "endLine": 39,
    "line": 39,
    "rule": "indentation",
    "severity": "error",
    "text": "Expected indentation of 2 spaces (indentation)",
  },
]
`;

exports[`Integration with stylelint stylelint with markdown block-in-list-blockquote.md 1`] = `
Array [
  Object {
    "column": 4,
    "endColumn": 5,
    "endLine": 9,
    "line": 9,
    "rule": "block-closing-brace-empty-line-before",
    "severity": "error",
    "text": "Unexpected empty line before closing brace (block-closing-brace-empty-line-before)",
  },
  Object {
    "column": 7,
    "endColumn": 8,
    "endLine": 16,
    "line": 16,
    "rule": "block-closing-brace-empty-line-before",
    "severity": "error",
    "text": "Unexpected empty line before closing brace (block-closing-brace-empty-line-before)",
  },
  Object {
    "column": 5,
    "endColumn": 23,
    "endLine": 7,
    "line": 7,
    "rule": "indentation",
    "severity": "error",
    "text": "Expected indentation of 6 spaces (indentation)",
  },
  Object {
    "column": 8,
    "endColumn": 9,
    "endLine": 16,
    "line": 13,
    "rule": "indentation",
    "severity": "error",
    "text": "Expected indentation of 8 spaces (indentation)",
  },
  Object {
    "column": 7,
    "endColumn": 8,
    "endLine": 16,
    "line": 16,
    "rule": "indentation",
    "severity": "error",
    "text": "Expected indentation of 8 spaces (indentation)",
  },
  Object {
    "column": 8,
    "endColumn": 26,
    "endLine": 14,
    "line": 14,
    "rule": "indentation",
    "severity": "error",
    "text": "Expected indentation of 10 spaces (indentation)",
  },
]
`;

exports[`Integration with stylelint stylelint with markdown lang-postcss.md 1`] = `
Array [
  Object {
    "column": 10,
    "endColumn": 11,
    "endLine": 6,
    "line": 6,
    "rule": "declaration-block-trailing-semicolon",
    "severity": "error",
    "text": "Expected a trailing semicolon (declaration-block-trailing-semicolon)",
  },
  Object {
    "column": 10,
    "endColumn": 11,
    "endLine": 14,
    "line": 14,
    "rule": "declaration-block-trailing-semicolon",
    "severity": "error",
    "text": "Expected a trailing semicolon (declaration-block-trailing-semicolon)",
  },
  Object {
    "column": 1,
    "endColumn": 2,
    "endLine": 7,
    "line": 5,
    "rule": "indentation",
    "severity": "error",
    "text": "Expected indentation of 2 spaces (indentation)",
  },
  Object {
    "column": 1,
    "endColumn": 2,
    "endLine": 7,
    "line": 7,
    "rule": "indentation",
    "severity": "error",
    "text": "Expected indentation of 2 spaces (indentation)",
  },
  Object {
    "column": 1,
    "endColumn": 11,
    "endLine": 6,
    "line": 6,
    "rule": "indentation",
    "severity": "error",
    "text": "Expected indentation of 4 spaces (indentation)",
  },
  Object {
    "column": 1,
    "endColumn": 2,
    "endLine": 15,
    "line": 13,
    "rule": "indentation",
    "severity": "error",
    "text": "Expected indentation of 2 spaces (indentation)",
  },
  Object {
    "column": 1,
    "endColumn": 2,
    "endLine": 15,
    "line": 15,
    "rule": "indentation",
    "severity": "error",
    "text": "Expected indentation of 2 spaces (indentation)",
  },
  Object {
    "column": 1,
    "endColumn": 11,
    "endLine": 14,
    "line": 14,
    "rule": "indentation",
    "severity": "error",
    "text": "Expected indentation of 4 spaces (indentation)",
  },
]
`;

exports[`Integration with stylelint stylelint with markdown nest.md 1`] = `
Array [
  Object {
    "column": 16,
    "endColumn": 17,
    "endLine": 7,
    "line": 7,
    "rule": "declaration-block-trailing-semicolon",
    "severity": "error",
    "text": "Expected a trailing semicolon (declaration-block-trailing-semicolon)",
  },
  Object {
    "column": 18,
    "endColumn": 19,
    "endLine": 15,
    "line": 15,
    "rule": "declaration-block-trailing-semicolon",
    "severity": "error",
    "text": "Expected a trailing semicolon (declaration-block-trailing-semicolon)",
  },
  Object {
    "column": 16,
    "endColumn": 17,
    "endLine": 23,
    "line": 23,
    "rule": "declaration-block-trailing-semicolon",
    "severity": "error",
    "text": "Expected a trailing semicolon (declaration-block-trailing-semicolon)",
  },
  Object {
    "column": 14,
    "endColumn": 15,
    "endLine": 31,
    "line": 31,
    "rule": "declaration-block-trailing-semicolon",
    "severity": "error",
    "text": "Expected a trailing semicolon (declaration-block-trailing-semicolon)",
  },
  Object {
    "column": 14,
    "endColumn": 15,
    "endLine": 41,
    "line": 41,
    "rule": "declaration-block-trailing-semicolon",
    "severity": "error",
    "text": "Expected a trailing semicolon (declaration-block-trailing-semicolon)",
  },
  Object {
    "column": 1,
    "endColumn": 1,
    "endLine": 40,
    "line": 39,
    "rule": "max-empty-lines",
    "severity": "error",
    "text": "Expected no more than 1 empty line (max-empty-lines)",
  },
  Object {
    "column": 1,
    "endColumn": 2,
    "endLine": 43,
    "line": 38,
    "rule": "no-empty-first-line",
    "severity": "error",
    "text": "Unexpected empty line (no-empty-first-line)",
  },
  Object {
    "column": 4,
    "endColumn": 5,
    "endLine": 24,
    "line": 24,
    "rule": "indentation",
    "severity": "error",
    "text": "Expected indentation of 4 spaces (indentation)",
  },
  Object {
    "column": 5,
    "endColumn": 6,
    "endLine": 32,
    "line": 32,
    "rule": "indentation",
    "severity": "error",
    "text": "Expected indentation of 2 spaces (indentation)",
  },
  Object {
    "column": 5,
    "endColumn": 6,
    "endLine": 42,
    "line": 42,
    "rule": "indentation",
    "severity": "error",
    "text": "Expected indentation of 2 spaces (indentation)",
  },
]
`;

exports[`Integration with stylelint stylelint with markdown test.md 1`] = `
Array [
  Object {
    "column": 12,
    "endColumn": 13,
    "endLine": 5,
    "line": 5,
    "rule": "declaration-block-trailing-semicolon",
    "severity": "error",
    "text": "Expected a trailing semicolon (declaration-block-trailing-semicolon)",
  },
  Object {
    "column": 12,
    "endColumn": 13,
    "endLine": 22,
    "line": 22,
    "rule": "declaration-block-trailing-semicolon",
    "severity": "error",
    "text": "Expected a trailing semicolon (declaration-block-trailing-semicolon)",
  },
]
`;
